--- a/portfolio/vehiculos.html
+++ b/portfolio/vehiculos.html
@@ -35,8 +35,8 @@
         <h1>Diseño e implementación de un ACC mediante MPC y fusión sensorial</h1>
         <p>Este proyecto consistió en el diseño, implementación y simulación en Matlab y Simulink de un <a href="https://es.wikipedia.org/wiki/Control_de_crucero_adaptativo" target="_blank" rel="noopener">control de crucero adaptativo</a> (ACC) mediante <a href="https://es.wikipedia.org/wiki/Control_predictivo_por_modelo" target="_blank" rel="noopener">control predictivo basado en modelo</a> (MPC) y fusión sensorial.</p>
         <p>Lo realicé junto a mis (excelentes) compañeros de máster Samuel e Isidro.</p>
-        <p>Los archivos utilizados se encuentran publicados en su <a href="https://github.com/derpberk/ControlVehiculosMPC" target="_blank" rel="noopener">repositorio de GitHub</a>.</p>
-        <p>Algunos vídeos de las simulaciones resultantes se encuentran publicados:</p>
+        <p>Los archivos utilizados se encuentran en su <a href="https://github.com/derpberk/ControlVehiculosMPC" target="_blank" rel="noopener">repositorio de GitHub</a>.</p>
+        <p>Los vídeos de las simulaciones resultantes también se encuentran publicados:</p>
         <ul>
           <li><a href="https://www.youtube.com/watch?v=t6OCKYygDjM" target="_blank" rel="noopener">Simulación 3D de reacción ante adelantamiento peligroso</a></li>
           <li><a href="https://www.youtube.com/watch?v=KhA-w_EQXy8" target="_blank" rel="noopener">Vista cenital del adelantamiento peligroso</a></li>
